--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default" id="increaseBtn"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1" id="itemValue">
-                           <button class="btn btn-default" id="plusBtn"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default" id="phoneDecrease"><i class="fas fa-minus"></i></button>
+                           <input type="text" class="form-control text-center" id="phoneCount" value="1">
+                           <button class="btn btn-default" id="phoneIncrease"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$<span id="phonePrice">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -43,12 +43,12 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default" id="caseDecrease"><i class="fas fa-minus"></i></button>
+                           <input type="text" class="form-control text-center" value="1" id="caseCount">
+                           <button class="btn btn-default" id="caseIncrease"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$<span id="casePrice">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="subtotal">1278</span></h5>
+                        <h5>$<span id="tax">0</span></h5>
+                        <h5>$<span id="total">1278</span></h5>
                      </div>
                   </div>
                </div>
